--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,7 +1,21 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-        "@babel/plugin-syntax-dynamic-import",
-        "@babel/plugin-proposal-class-properties"
-    ]
+	"presets": ["@babel/preset-env", "@babel/preset-react"],
+	"plugins": [
+		"@babel/plugin-transform-regenerator",
+		"@babel/plugin-transform-async-to-generator",
+		"@babel/plugin-syntax-dynamic-import",
+		"@babel/plugin-proposal-class-properties",
+		[
+			"@babel/proposal-object-rest-spread",
+			{
+				"loose": true
+			}
+		],
+		[
+			"@babel/plugin-transform-runtime",
+			{
+				"regenerator": true
+			}
+		]
+	]
 }
