--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "@babel/plugin-transform-regenerator": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^10.2.6",
@@ -43,6 +46,7 @@
   "dependencies": {
     "antd": "^4.16.1",
     "axios": "^0.21.1",
+    "icomoon-react": "^2.0.19",
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
