--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
