--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.config.js --open --hot",
+    "dev": "webpack serve --config webpack.dev.config.js",
     "build": "webpack --config webpack.prod.config.js"
   },
   "author": "",
