--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "antd": "^4.16.1",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "icomoon-react": "^2.0.19",
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.7.2",
