--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "icomoon-react": "^2.0.19",
+    "moment": "^2.29.1",
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
